test/pointer/fail/ptr_cl04.v3
//@execute (9, 9)=0; (-19, 319)=300
component ptr_cl04 {
	var ap: Array<int> = [11];
	var aq: Array<int> = [33];
	def main(a: int, b: int) -> int {
		var p = Pointer.atContents(ap), q = Pointer.atContents(aq);
		store(p.store<int>, a);
		store(q.store<int>, b);
		return ap(0) - aq(0);
	}
	def store(f: int -> void, i: int) { f(i); }
}
